<resources>
    <string name="app_name">Sports Match</string>
    <string name="login_succeed">로그인 성공! 환영합니다.</string>
    <string name="login_error">로그인 창을 표시할 수 없습니다.</string>
    <string name="login_cancel">취소하였습니다.</string>
    <string name="login_network_error">네트워크가 연결되어 있지 않습니다.</string>
    <string name="login_unknown_error">알 수 없는 오류가 발생했습니다.</string>
    <string name="login_token_error">토큰이 없습니다.</string>
    <string name="login_login_failed_error">로그인에 실패하였습니다.</string>
    <string name="nick_name_hint">닉네임</string>
    <string name="complete">완 료</string>
    <string name="submit">등 록</string>
    <string name="logout">로그아웃</string>
    <string name="logout_succeed">로그아웃 되었습니다.</string>
    <string name="modified_profile">프로필 설정</string>
    <string name="profile_change_succeed">프로필이 설정되었습니다.</string>
    <string name="label_map_destination">지도</string>
    <string name="label_home_destination">홈</string>
    <string name="label_favorites_destination">즐겨찾기</string>
    <string name="title">제목</string>
    <string name="category">카테고리</string>
    <string name="type">타입</string>
    <string name="time">시간</string>
    <string name="location">장소</string>
    <string name="category_hint">카테고리를 선택해주세요.</string>
    <string name="category_soccer">축구</string>
    <string name="category_baseball">야구</string>
    <string name="category_tennis">테니스</string>
    <string name="category_bowling">볼링</string>
    <string name="category_etc">기타</string>
    <string name="category_type_matching">매칭신청</string>
    <string name="category_type_team_meet">팀원모집</string>
    <string name="category_type_edu">강습</string>
    <string name="write_location_hint">장소입력 후 오른쪽 아이콘을 클릭해주세요.</string>
    <string name="write_date_hint">ex) xxxx.xx.xx / xx시</string>
    <string name="write_title_hint">제목을 입력해주세요.</string>
    <string name="write_content_hint">내용을 적어주세요.</string>
    <string name="label_main_destination">HomeActivity</string>
    <string name="label_write_destination">WriteFragment</string>
    <string name="label_post_list_destination">CategoryPostListFragment</string>
    <string name="label_detail_destination">DetailFragment</string>
    <string name="dialog_text">잠시만 기다려 주세요.</string>
    <string name="write_succeed">등록 되었습니다.</string>
    <string name="write_failed">모든 정보를 입력 해주세요.</string>
    <string name="setting_failed">영문 + 숫자 5글자 혹은 한글 2글자 이상, 6글자 이하로 설정해주세요.</string>
    <string name="write_failed_profile">글을 등록하려면 프로필 사진과 닉네임을 설정해주세요.</string>
</resources>