<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_write_title"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:gravity="start|center"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_write_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="start|center"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/view_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_write_title"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_title"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/green_400"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_write_title" />

    <TextView
        android:id="@+id/tv_write_category"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:gravity="start|center"
        android:text="@string/category"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_write_title" />

    <EditText
        android:id="@+id/et_write_category"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:gravity="start|center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/view_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_write_category"
        app:layout_constraintTop_toBottomOf="@+id/view_title" />

    <View
        android:id="@+id/view_category"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/green_400"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_write_category" />

    <TextView
        android:id="@+id/tv_write_date"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:gravity="start|center"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_write_category" />

    <EditText
        android:id="@+id/et_write_date"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:gravity="start|center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_write_category"
        app:layout_constraintTop_toBottomOf="@+id/view_category" />

    <View
        android:id="@+id/view_date"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/green_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_write_date" />

    <TextView
        android:id="@+id/tv_write_location"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:gravity="start|center"
        android:text="@string/location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_write_date" />

    <EditText
        android:id="@+id/et_write_location"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:gravity="start|center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_write_location"
        app:layout_constraintStart_toEndOf="@+id/tv_write_category"
        app:layout_constraintTop_toBottomOf="@+id/view_date" />

    <ImageView
        android:id="@+id/iv_write_location"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/tv_write_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_write_date" />
    <View
        android:id="@+id/view_location"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/green_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_write_location" />

    <RelativeLayout
        android:id="@+id/rl_write_location_img"
        android:layout_width="0dp"
        android:layout_height="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_location" />

    <View
        android:id="@+id/view_location_img"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/green_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_write_location_img" />

    <EditText
        android:id="@+id/et_write_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_location_img" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_addPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_100"
        android:text="@string/complete"
        android:textColor="@color/green_200"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>